# kernel

./: .gitignore  LICENSE  README
kernel/: Cargo.toml  build  build.rs  build_and_emulate  check  check_results  config.aphro.example  disassembly  emulate  expand  format  functions  get_version  i686-unknown-none.json  kernel.flat  link.x  rustfmt.toml  targets  targets.tmp
kernel/.cargo/: config.toml
kernel/aphrodite_common/: Cargo.toml
kernel/aphrodite_proc_macros/: Cargo.toml
kernel/grub/boot/: aphrodite.kernel
kernel/grub/boot/grub/: grub.cfg
kernel/grub_template/boot/grub/: grub.cfg
kernel/src/arch_boot_entry/: x86.rs
kernel/src/common/: mod.rs
kernel/src/include/: _entry.rs  boot.rs  cfg.rs  cmdline.rs  constants.rs  display.rs  errors.rs  mem.rs  mod.rs  multiboot2.rs  output.rs  psfont.rs  test.rs  traits.rs  util.rs
kernel/src/include/arch/: mod.rs
kernel/src/include/arch/x86/: constants.rs  egatext.rs  interrupts.rs  mod.rs  output.rs  paging.rs  ports.rs
kernel/src/include/arch/x86_asmp/: egatext.rs  mod.rs
kernel/src/internal/arch/x86/: entry.rs
kernel/src/internal/arch/x86_asmp/: entry.rs
kernel/src/kernel/: boot.rs  cfg.rs  cmdline.rs  constants.rs  display.rs  errors.rs  indep_boot_entry.rs  mem.rs  memsections.rs  mod.rs  multiboot2.rs  output.rs  psfont.rs  test.rs  util.rs
kernel/src/kernel/arch/: mod.rs
kernel/src/kernel/arch/example_impl/: mod.rs
kernel/src/kernel/arch/x86/: constants.rs  egatext.rs  gdt.rs  (+8 more)
kernel/src/kernel/power_on_tests/: display.rs  memmapalloc.rs  mod.rs
kernel/src/proc_macros/: mod.rs
(+10 files in other folders)
