[package]
name = "kernel"
version = "0.2.0-devel-0000"
edition = "2024"

[dependencies]
paste = "1.0.15"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "entrypoint_x86"
path = "src/internal/arch/x86_asmp/entry.rs"

[[bin]]
name = "main"
path = "src/internal/main.rs"

[lib]
name = "aphrodite"
path = "src/include/mod.rs"

[[test]]
name = "test_aphrodite"
path = "src/include/test.rs"
